--- a/.github/workflows/StudentRegistryBuildAndTest.yml
+++ b/.github/workflows/StudentRegistryBuildAndTest.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -17,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
@@ -25,4 +24,5 @@ jobs:
     - run: npm ci
     - run: npm start &
     - run: sleep 5
+    - run: chmod +x node_modules/.bin/mocha
     - run: npx mocha tests/*.js
