--- a/.github/workflows/StudentRegistryBuildAndTest.yml
+++ b/.github/workflows/StudentRegistryBuildAndTest.yml
@@ -9,20 +9,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup Node.js
+
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+
+    - run: npm install
+
     - run: npm start &
+    
     - run: sleep 5
-    - run: ls -l node_modules/.bin/mocha
-    - run: head -20 node_modules/.bin/mocha
-    - run: node ./node_modules/mocha/bin/mocha.js tests/*.js
+
+    - run: npx mocha tests/*.js
