--- a/.github/workflows/StudentRegistryBuildAndTest.yml
+++ b/.github/workflows/StudentRegistryBuildAndTest.yml
@@ -17,16 +17,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
 
-    - run: npm install
+    - name: Install dependencies
+      run: npm install
 
-    - run: npm start &
-    
-    - run: sleep 5
+    - name: Start app in background
+      run: npm start &
+      
+    - name: Wait for server to start
+      run: sleep 5
 
-    - run: npx mocha tests/*.js
+    - name: Run tests
+      run: npx mocha tests/*.js
