fixing jenkins file

--- a/jenkinsFile
+++ b/jenkinsFile
@@ -12,18 +12,14 @@ pipeline {
     stages {
         stage ('Checkout') {
             steps{
-                checkout scm
-            }
+                git branch: 'main', url: 'https://github.com/thrtt/StudentRegistryAppDemo'             }
         }
 
         stage ('Install dependencies') {
             steps {
                 script {
-                    if (isUnix ()) {
-                        sh 'npm install'
-                    }
-                    else {
-                        sh 'npm install'
+                    
+                        bat 'npm install'
                     }
                 }
             }
@@ -32,9 +28,9 @@ pipeline {
         stage ('Start aplication and run tests'){
             steps {
                 script {
-                    sh 'npm start &'
-                    sh 'wait-on http://localhost:8090'
-                    sh 'npm test'
+                    bat 'npm start &'
+                    bat 'wait-on http://localhost:8090'
+                    bat 'npm test'
                 }
             }
         }
